@@ -21,10 +21,13 @@
 
 TreeTank 4.14
 -------------
++ Added index() to IWriteTransaction. Note that this currently only makes
+  the first occurrence available for later retrieval.
++ Added FullTextAxis to perform simple contains.
 + Added notion of reference key as multipurpose key.
 + Added lots of test cases.
-+ Binary incompatibility because fulltext root node takes key 1.
-+ Added hooks for fulltext index
++ Binary incompatibility because full text root node takes key 1.
++ Added hooks for full text index (inverted index based on prefix tree).
   (FullTextRootNode, FullTextNode, and FullTextAttributeNode).
 + Session and transaction tracks close state to prevent access after close.
 + Allow multiple commit() and abort() calls before close().
